@@ -155,6 +155,7 @@ typedef struct {
     bool old_bulb_mode;                              // true for older cameras
     bool need_exposure_mode_conversion;              // is exposure_mode_conversion required
     bool bufmask_command;                            // true if bufmask determined by calling command 0x02 0x00
+    bool bufmask_single;                             // true if buffer cannot handle multiple images
     bool is_little_endian;                           // whether the return value should be parsed as little-endian
     int status_buffer_size;                          // status buffer size in bytes
     int max_jpeg_stars;                              // maximum jpeg stars
